--- a/animals.html
+++ b/animals.html
@@ -62,79 +62,17 @@
           line-height: 2;
           margin-bottom: 1.25rem;
         }
+
+        ul {
+            list-style: circle;
+            margin: 1rem 0;
+        }
         </style>
     </head>
     <body>
         <h1>My Animal Repository</h1>
         <ul class="cards">
-            <li class="cards__item"><div class="card__title">American Foxhound<br/>
-</div><p class="card__text"><strong>Diet</strong>: Omnivore<br/>
-<strong>Location</strong>: North-America<br/>
-<strong>Type</strong>: Hound<br/>
-</p></li><li class="cards__item"><div class="card__title">Arctic Fox<br/>
-</div><p class="card__text"><strong>Diet</strong>: Carnivore<br/>
-<strong>Location</strong>: Eurasia<br/>
-<strong>Type</strong>: Mammal<br/>
-</p></li><li class="cards__item"><div class="card__title">Cross Fox<br/>
-</div><p class="card__text"><strong>Diet</strong>: Carnivore<br/>
-<strong>Location</strong>: North-America<br/>
-<strong>Type</strong>: mammal<br/>
-</p></li><li class="cards__item"><div class="card__title">Darwin’s fox<br/>
-</div><p class="card__text"><strong>Diet</strong>: Omnivore<br/>
-<strong>Location</strong>: South-America<br/>
-<strong>Type</strong>: Mammal<br/>
-</p></li><li class="cards__item"><div class="card__title">English Foxhound<br/>
-</div><p class="card__text"><strong>Diet</strong>: Omnivore<br/>
-<strong>Location</strong>: Europe<br/>
-</p></li><li class="cards__item"><div class="card__title">Fennec Fox<br/>
-</div><p class="card__text"><strong>Diet</strong>: Omnivore<br/>
-<strong>Location</strong>: Africa<br/>
-</p></li><li class="cards__item"><div class="card__title">Fox<br/>
-</div><p class="card__text"><strong>Diet</strong>: Carnivore<br/>
-<strong>Location</strong>: Africa<br/>
-<strong>Type</strong>: Mammal<br/>
-</p></li><li class="cards__item"><div class="card__title">Fox Snakes<br/>
-</div><p class="card__text"><strong>Diet</strong>: Carnivore<br/>
-<strong>Location</strong>: North-America<br/>
-</p></li><li class="cards__item"><div class="card__title">Fox Squirrel<br/>
-</div><p class="card__text"><strong>Diet</strong>: Omnivore<br/>
-<strong>Location</strong>: Central-America<br/>
-<strong>Type</strong>: rodent<br/>
-</p></li><li class="cards__item"><div class="card__title">Fox Terrier<br/>
-</div><p class="card__text"><strong>Diet</strong>: Omnivore<br/>
-<strong>Location</strong>: Europe<br/>
-</p></li><li class="cards__item"><div class="card__title">Golden-Crowned Flying Fox<br/>
-</div><p class="card__text"><strong>Diet</strong>: Herbivore<br/>
-<strong>Location</strong>: Asia<br/>
-</p></li><li class="cards__item"><div class="card__title">Gray Fox<br/>
-</div><p class="card__text"><strong>Diet</strong>: Omnivore<br/>
-<strong>Location</strong>: Central-America<br/>
-<strong>Type</strong>: Mammal<br/>
-</p></li><li class="cards__item"><div class="card__title">Kit Fox<br/>
-</div><p class="card__text"><strong>Diet</strong>: Omnivore<br/>
-<strong>Location</strong>: Central-America<br/>
-<strong>Type</strong>: mammal<br/>
-</p></li><li class="cards__item"><div class="card__title">Marble Fox<br/>
-</div><p class="card__text"><strong>Diet</strong>: Omnivore<br/>
-<strong>Location</strong>: North-America<br/>
-<strong>Type</strong>: Mammal<br/>
-</p></li><li class="cards__item"><div class="card__title">Red Fox<br/>
-</div><p class="card__text"><strong>Diet</strong>: Omnivore<br/>
-<strong>Location</strong>: Africa<br/>
-</p></li><li class="cards__item"><div class="card__title">Smooth Fox Terrier<br/>
-</div><p class="card__text"><strong>Diet</strong>: Omnivore<br/>
-<strong>Location</strong>: Europe<br/>
-</p></li><li class="cards__item"><div class="card__title">Tibetan Fox<br/>
-</div><p class="card__text"><strong>Diet</strong>: Carnivore<br/>
-<strong>Location</strong>: Asia<br/>
-<strong>Type</strong>: Mammal<br/>
-</p></li><li class="cards__item"><div class="card__title">Toy Fox Terrier<br/>
-</div><p class="card__text"><strong>Diet</strong>: Omnivore<br/>
-<strong>Location</strong>: North-America<br/>
-</p></li><li class="cards__item"><div class="card__title">Wire Fox Terrier<br/>
-</div><p class="card__text"><strong>Diet</strong>: Omnivore<br/>
-<strong>Location</strong>: Europe<br/>
-</p></li>
+            <li class="cards__item"><div class="card__title">American Foxhound </div><div class="card__text"><ul><li><strong>Diet</strong>: Omnivore</li><li><strong>Location</strong>: North-America</li><li><strong>Type</strong>: Hound</li><li><strong>Color</strong>: BlackWhiteTan</li><li><strong>Lifespan</strong>: 10 to 12 years</li></ul></div></li><li class="cards__item"><div class="card__title">Arctic Fox </div><div class="card__text"><ul><li><strong>Diet</strong>: Carnivore</li><li><strong>Location</strong>: Eurasia</li><li><strong>Type</strong>: Mammal</li><li><strong>Color</strong>: GreyBlackWhite</li><li><strong>Lifespan</strong>: 7 - 10 years</li></ul></div></li><li class="cards__item"><div class="card__title">Cross Fox </div><div class="card__text"><ul><li><strong>Diet</strong>: Carnivore</li><li><strong>Location</strong>: North-America</li><li><strong>Type</strong>: mammal</li><li><strong>Color</strong>: RedBlackSilver</li><li><strong>Lifespan</strong>: 10 to 15 years in captivity, seven years in the wild</li></ul></div></li><li class="cards__item"><div class="card__title">Darwin’s fox </div><div class="card__text"><ul><li><strong>Diet</strong>: Omnivore</li><li><strong>Location</strong>: South-America</li><li><strong>Type</strong>: Mammal</li><li><strong>Color</strong>: GreyRedBlack</li><li><strong>Lifespan</strong>: Seven years</li></ul></div></li><li class="cards__item"><div class="card__title">English Foxhound </div><div class="card__text"><ul><li><strong>Diet</strong>: Omnivore</li><li><strong>Location</strong>: Europe</li><li><strong>Color</strong>: BlackWhiteTanMulti-colored</li><li><strong>Lifespan</strong>: 10 to 13 years</li></ul></div></li><li class="cards__item"><div class="card__title">Fennec Fox </div><div class="card__text"><ul><li><strong>Diet</strong>: Omnivore</li><li><strong>Location</strong>: Africa</li><li><strong>Color</strong>: WhiteCreamSandy</li><li><strong>Lifespan</strong>: 10 - 14 years</li></ul></div></li><li class="cards__item"><div class="card__title">Fox </div><div class="card__text"><ul><li><strong>Diet</strong>: Carnivore</li><li><strong>Location</strong>: Africa</li><li><strong>Type</strong>: Mammal</li><li><strong>Color</strong>: BrownRedBlackTan</li><li><strong>Lifespan</strong>: 3 - 11 years</li></ul></div></li><li class="cards__item"><div class="card__title">Fox Snakes </div><div class="card__text"><ul><li><strong>Diet</strong>: Carnivore</li><li><strong>Location</strong>: North-America</li><li><strong>Color</strong>: BrownGreyBeigeChestnut</li><li><strong>Lifespan</strong>: approximately 20 years</li></ul></div></li><li class="cards__item"><div class="card__title">Fox Squirrel </div><div class="card__text"><ul><li><strong>Diet</strong>: Omnivore</li><li><strong>Location</strong>: Central-America</li><li><strong>Type</strong>: rodent</li><li><strong>Color</strong>: BrownGrey-Brown</li><li><strong>Lifespan</strong>: 6-12.6 years</li></ul></div></li><li class="cards__item"><div class="card__title">Fox Terrier </div><div class="card__text"><ul><li><strong>Diet</strong>: Omnivore</li><li><strong>Location</strong>: Europe</li><li><strong>Lifespan</strong>: 14 years</li></ul></div></li><li class="cards__item"><div class="card__title">Golden-Crowned Flying Fox </div><div class="card__text"><ul><li><strong>Diet</strong>: Herbivore</li><li><strong>Location</strong>: Asia</li><li><strong>Color</strong>: BlackGold</li><li><strong>Lifespan</strong>: unknown</li></ul></div></li><li class="cards__item"><div class="card__title">Gray Fox </div><div class="card__text"><ul><li><strong>Diet</strong>: Omnivore</li><li><strong>Location</strong>: Central-America</li><li><strong>Type</strong>: Mammal</li><li><strong>Color</strong>: GreyRedBlackWhite</li><li><strong>Lifespan</strong>: 6-12 years</li></ul></div></li><li class="cards__item"><div class="card__title">Kit Fox </div><div class="card__text"><ul><li><strong>Diet</strong>: Omnivore</li><li><strong>Location</strong>: Central-America</li><li><strong>Type</strong>: mammal</li><li><strong>Color</strong>: GreyYellowBlackWhite</li><li><strong>Lifespan</strong>: seven years in the wild. 12 years in captivity</li></ul></div></li><li class="cards__item"><div class="card__title">Marble Fox </div><div class="card__text"><ul><li><strong>Diet</strong>: Omnivore</li><li><strong>Location</strong>: North-America</li><li><strong>Type</strong>: Mammal</li><li><strong>Color</strong>: BrownBlackWhite</li><li><strong>Lifespan</strong>: Up to 15 years</li></ul></div></li><li class="cards__item"><div class="card__title">Red Fox </div><div class="card__text"><ul><li><strong>Diet</strong>: Omnivore</li><li><strong>Location</strong>: Africa</li><li><strong>Color</strong>: BrownGreyRedBlackSilver</li><li><strong>Lifespan</strong>: 2-4 years in the wild, 10-12 in captivity</li></ul></div></li><li class="cards__item"><div class="card__title">Smooth Fox Terrier </div><div class="card__text"><ul><li><strong>Diet</strong>: Omnivore</li><li><strong>Location</strong>: Europe</li><li><strong>Color</strong>: BrownBlackWhiteTan</li><li><strong>Lifespan</strong>: 12 – 15 years</li></ul></div></li><li class="cards__item"><div class="card__title">Tibetan Fox </div><div class="card__text"><ul><li><strong>Diet</strong>: Carnivore</li><li><strong>Location</strong>: Asia</li><li><strong>Type</strong>: Mammal</li><li><strong>Color</strong>: GreyTan</li><li><strong>Lifespan</strong>: 8-10 years</li></ul></div></li><li class="cards__item"><div class="card__title">Toy Fox Terrier </div><div class="card__text"><ul><li><strong>Diet</strong>: Omnivore</li><li><strong>Location</strong>: North-America</li><li><strong>Color</strong>: BlackWhiteTanChocolate</li><li><strong>Lifespan</strong>: 11-14 years</li></ul></div></li><li class="cards__item"><div class="card__title">Wire Fox Terrier </div><div class="card__text"><ul><li><strong>Diet</strong>: Omnivore</li><li><strong>Location</strong>: Europe</li><li><strong>Color</strong>: BlackWhiteTan</li><li><strong>Lifespan</strong>: 13 – 14 years</li></ul></div></li>
         </ul>
     </body>
 </html>
