--- a/animals_template.html
+++ b/animals_template.html
@@ -62,6 +62,11 @@
           line-height: 2;
           margin-bottom: 1.25rem;
         }
+
+        ul {
+            list-style: circle;
+            margin: 1rem 0;
+        }
         </style>
     </head>
     <body>
